--- a/extra/static/css/owncloud.css
+++ b/extra/static/css/owncloud.css
@@ -54,6 +54,10 @@
 	height: 280px;
 }
 
+.owncloud-iframe-modal.generate-tp .modal-body {
+	height: 340px;
+}
+
 .owncloud-iframe-modal iframe {
 	width: 100%;
 	height: 100%;
